@@ -18,12 +18,20 @@
     <h2>Getting Checkbot</h2>
 
     <p>Current releases of Checkbot can always be found on <a
-		href="http://www.perl.com/CPAN/">CPAN</a>, the Comprehensive Perl
+		href="http://www.perl.com/CPAN/modules/by-authors/id/JJDG/">CPAN</a>,
+		the Comprehensive Perl
 	  Archive Network. Currently the latest version is <a
-		href="checkbot-1.76.tar.gz">checkbot-1.76.tar.gz</a>.</p>
+		href="checkbot-1.77.tar.gz">checkbot-1.77.tar.gz</a>.</p>
 
 	<p>Checkbot is now hosted on <a
 		href="http://sourceforge.net/projects/checkbot/">sourceforge.net</a>.</p>
+
+	<h3>Changes in version 1.77 (28-Jul-2005)</h3>
+	<ul>
+	  <li>Fix silly build-related problem that prevented checkbot 1.76
+		from running at all.</li>
+	  <li>Check for presence of robots meta tag and act on it.</li>
+	</ul>
 
 	<h3>Changes in version 1.76 (25-Jul-2005)</h3>
 	<ul>
@@ -33,7 +41,6 @@
 		checked.</li>
 	  <li>Documentation updates.</li>
 	</ul>
-
 
     <h3>Changes in version 1.75 (22-Apr-2004)</h3>
     <ul>
@@ -160,7 +167,7 @@
 <address>
 <!-- Created: Sun Aug 31 19:50:42 CEST 1997 -->
 <!-- hhmts start -->
-Last modified: Mon Jul 25 21:36:47 CEST 2005
+Last modified: Thu Jul 28 20:00:08 CEST 2005
 <!-- hhmts end -->
 </address>
   </body>
